Change fieldtype to URL, add limitation text to placeholder

--- a/src/templates/VideoField/input.twig
+++ b/src/templates/VideoField/input.twig
@@ -18,6 +18,8 @@
             {{ forms.text({
                 id: name,
                 name: name,
+                type: 'url',
+                placeholder: 'Only YouTube and Vimeo supported.',
                 value: value ? value,
                 class: 'video-embedder-url'
             }) }}
